don't say access denied twice, resolves #696

--- a/TASVideos/Pages/Account/AccessDenied.cshtml
+++ b/TASVideos/Pages/Account/AccessDenied.cshtml
@@ -4,6 +4,5 @@
 }
 
 <header class="text-danger">
-	<h2>@ViewData["Title"]</h2>
-	<p>You do not have access to this resource.</p>
+	<h4>You do not have access to this resource.</h4>
 </header>
