add an AwardsEditor with new role, resolves #260

--- a/TASVideos/Pages/Shared/_Award.cshtml
+++ b/TASVideos/Pages/Shared/_Award.cshtml
@@ -1,4 +1,4 @@
-﻿@model TASVideos.Core.Services.AwardAssignmentSummary
+﻿@model TASVideos.Core.Services.IAwardAssignmentSummary
 @{
 	string awardName = $"{Model.ShortName}_{Model.Year.ToString()}";
 }
