--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -109,6 +109,7 @@
 	<hr />
 	<row>
 		<column lg="6">
+			<partial name="_WikiEditHelper" model="@("Submission_MovieMarkup")" />
 			<form-group>
 				<label asp-for="Submission.MovieMarkup" class="form-control-label"></label>
 				<textarea asp-for="Submission.MovieMarkup" class="form-control" rows="10"></textarea>
