--- a/TASVideos/Pages/Publications/Edit.cshtml
+++ b/TASVideos/Pages/Publications/Edit.cshtml
@@ -120,6 +120,9 @@
 	<two-column-select id-list="Publication.SelectedTags" available-list="AvailableTags" />
 	@await Component.RenderWiki("System/ClassEditingHelp")
 	<hr />
+	<fullrow class="mt-3">
+		<partial name="_WikiEditHelper" model="@("Publication_Markup")" />
+	</fullrow>
 	<fullrow>
 		<form-group>
 			<label asp-for="Publication.Markup" class="form-control-label"></label>
