Fix BrokenLinks module to account for built in site pages, and page routes, fixes #1026

--- a/TASVideos/Pages/GameGroups/Index.cshtml
+++ b/TASVideos/Pages/GameGroups/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{id}"
-@model TASVideos.Pages.GamesGroups.IndexModel
+@model IndexModel
 @{
 	ViewData["Title"] = $"Games for Group: {Model.Name}";
 }
