Broken Links - order by Referrer

--- a/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
@@ -27,7 +27,7 @@
 				<th>Linked From</th>
 				<th>Excerpt</th>
 			</tr>
-			@foreach (var link in brokenLinks)
+			@foreach (var link in brokenLinks.OrderBy(b => b.Referrer))
 			{
 				<tr>
 					<td style="max-width: 400px; overflow-x: auto"><a href="/@WikiHelper.ProcessLink(link.Referral)">@Html.Encode(WikiHelper.ProcessLink(link.Referral))</a></td>
