--- a/TASVideos/Pages/Users/IpBan.cshtml
+++ b/TASVideos/Pages/Users/IpBan.cshtml
@@ -6,9 +6,9 @@
 	<row>
 		<column lg="6">
 			<form-group>
-				<label asp-for="IpAddress"></label>
-				<input asp-for="IpAddress" type="text" class="form-control" />
-				<span asp-validation-for="IpAddress" class="text-danger"></span>
+				<label asp-for="IpAddressToBan"></label>
+				<input asp-for="IpAddressToBan" type="text" class="form-control" />
+				<span asp-validation-for="IpAddressToBan" class="text-danger"></span>
 			</form-group>
 			<submit-button class="btn btn-primary">Add</submit-button>
 		</column>
