Wiki helper toolbar - add link post and link topic buttons, resolves #1397

--- a/TASVideos/Pages/Shared/_WikiEditHelper.cshtml
+++ b/TASVideos/Pages/Shared/_WikiEditHelper.cshtml
@@ -9,6 +9,8 @@
 	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[user:@User.Name()]: ," data-akey="u">user</button>
 	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[module:youtube|v=,]">youtube</button>
 	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[module:frames|amount=,]">frames</button>
+	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[Forum/Posts/,]">Link Post</button>
+	<button type="button" class="btn bg-info text-dark btn-sm border-dark" tabindex="-1" data-fmt="[Forum/Topics/,]">Link Topic</button>
 </div>
 <script>
 	document.addEventListener("DOMContentLoaded", function() {
