--- a/TASVideos/Pages/Publications/EditFiles.cshtml
+++ b/TASVideos/Pages/Publications/EditFiles.cshtml
@@ -36,7 +36,7 @@
 		<column lg="6">
 			<form-group>
 				<label asp-for="NewFile"></label>
-				<input type="file" asp-for="NewFile" class="form-control" />
+				<input asp-for="NewFile" class="form-control" />
 				<span asp-validation-for="NewFile" class="text-danger"></span>
 			</form-group>
 			<form-group id="description-group">
