--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -90,7 +90,7 @@
 			</form-group>
 			<form-group>
 				<label asp-for="Submission.Screenshot" class="form-control-label"></label>
-				<input type="file" asp-for="Submission.Screenshot" class="form-control" />
+				<input asp-for="Submission.Screenshot" class="form-control" />
 				<span>
 					Must be JPEG or PNG
 					<br />
