--- a/TASVideos/Pages/UserFiles/Upload.cshtml
+++ b/TASVideos/Pages/UserFiles/Upload.cshtml
@@ -16,7 +16,7 @@
 		<column>
 			<form-group>
 				<label asp-for="UserFile.File" class="form-control-label"></label>
-				<input asp-for="UserFile.File" type="file" class="form-control" />
+				<input asp-for="UserFile.File" class="form-control" />
 				<span id="FileInputWarning" asp-validation-for="UserFile.File" class="text-danger"></span>
 			</form-group>
 			<form-group>
