Activity/Publishers - remove extraneous quotation mark

--- a/TASVideos/Pages/Activity/Publishers.cshtml
+++ b/TASVideos/Pages/Activity/Publishers.cshtml
@@ -33,7 +33,7 @@
 					<timezone-convert asp-for="@pub.CreateTimestamp" date-only="true" />
 				</td>
 				<td>
-					<pub-link id="pub.Id">[@pub.Id] @pub.Title"</pub-link><br />
+					<pub-link id="pub.Id">[@pub.Id] @pub.Title</pub-link><br />
 				</td>
 				<td>
 					@pub.Class
