--- a/TASVideos/Pages/Profile/HomePage.cshtml
+++ b/TASVideos/Pages/Profile/HomePage.cshtml
@@ -18,8 +18,7 @@
 else
 {
 	<warning-alert>
-		<label class="text-warning">Warning: You do not have permissions to edit your homepage</label>
-		<label>By default all users have this permission. Your permission must have been revoked or is otherwise missing</label>
+		@await Component.RenderWiki("System/HomePageCannotBeEdited")
 	</warning-alert>
 }
 <hr />
@@ -30,8 +29,6 @@ else
 else if (ViewData.UserHas(PermissionTo.EditHomePage))
 {
 	<info-alert>
-		<h4>Page does not yet exist</h4>
-		<label class="text-info">By default, all registered users can create and maintain a homepage if they choose.</label><br />
-		<label>Click Edit to create/edit your homepage.</label>
+		@await Component.RenderWiki("System/HomePageDoesNotExist")
 	</info-alert>
 }
